dataset1235/2025-2/1955397009/users/209087680/executions/2304143742_95297336.log
== RUN (2025-09-02 13:03:32)
-- CODE: 
x=input(" ")
y=float(input())
if (x=="F"):
  c=(5/9)(y-32)
  print(round(c,2))
else:
  
  print(f)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:03:59)
-- CODE: 
x=input(" ")
y=float(input())
if (x=="F"):
  c=(5/9)*(y-32)
  print(round(c,2))
else:
  
  print(f)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
-1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:03:30)
-- CODE: 
x=input(" ")
y=float(input())
if (x=="F"):
  c=(5/9)(y-32)
  print(round(c,2))
else:
  
  print(f)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
          ^
NameError: name 'f' is not defined
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
XXXX:4: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  c=(5/9)(y-32)
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c=(5/9)(y-32)
      ^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:07:07)
-- CODE: 
x=input(" ")
y=float(input())
if (x=="F"):
  c=(5/9)*(y-32)
  print(round(c,2))
else:
  f=(9/5)*y+32
  print(round(f,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
-1.11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
